Update metadata and improve split leaf divider

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Scottish Metrical Psalter</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <meta property="og:image" content="https://dieuwedeboer.github.io/scottishmetricalpsalter/thumbnail.jpg">
+    <meta property="og:description" content="The Scottish Metrical Psalter app provides a collection of Psalms sung in the Scottish tradition, with tunes that can be dynamically adjusted and played by the user. Helpful commentaries and suggestions are provided for each Psalm.">
+    <meta name="keywords" content="Scottish Psalter, Metrical Psalter, Scottish Psalms, Psalm Singing">
+    <meta name="twitter:card" content="summary_large_image">
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-8PK2D57FK8"></script>
     <script>
